  the stopped threads to be printed.  The flag can be useful to get a
  reduced list when there is a large number of unstopped threads.

* Add convenience variable `$_simd_lane`.

* Python API

  ** Added gdb.record.clear(). Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

* MI changes

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     spefific.

  ** '-thread-info'

     If a thread is stopped, available, and has SIMD lanes, MI output
     of '-thread-info' for such a thread contains 'execution-mask' and
     'simd-width' fields.  If a thread is stopped at a breakpoint, add
     'hit-lanes-mask' to its output.  The mask encodes for which lanes
     the breakpoint condition was evaluated to true.

  ** '-device-info'

     Added new MI command '-device-info' which is equivalent to CLI command
     'info devices'.

  ** Stop events include execution-mask, simd-width and hit-lanes-mask fields if
     available.

  ** '-thread-simd-width'

     Added new MI command '-thread-simd-width' which returns the SIMD width of a
     stopped thread.

  ** '-thread-execution-mask'

     Added new MI command for getting thread execution mask.

  ** Added 'hit-lanes-mask' field to '-thread-info' output.

     If the '-thread-info' output contains a thread which is stopped at a
     breakpoint, and the thread has SIMD lanes, 'hit-lanes-mask' field contains
     a hex mask of the SIMD lanes which were hit by the breakpoint.

  ** '-thread-hit-lanes-mask'
